--- a/sec/acronyms.tex
+++ b/sec/acronyms.tex
@@ -15,6 +15,7 @@
 \newacronym{saml}{SAML}{Security Assertion Markup Language}
 \newacronym{stork}{STORK}{Secure identity across borders linked}
 \newacronym{fa}{FA}{Fornecedor de Autenticação}
+\newacronym{nic}{NIC}{Número Identificação Civil}
 
 %%baseado com jwt
 \newacronym{jwt}{JWT}{JSON Web Token}
