--- a/dissertation.tex
+++ b/dissertation.tex
@@ -21,6 +21,8 @@
 \usepackage{pgfplots}
 \usepackage{csquotes}
 \usepackage{indentfirst}
+\usepackage{listings}
+\usepackage{color}
 
 % ACRONYMS -----------------------------------------------------
 
